--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -93,10 +93,11 @@
     - Traduction allemande : Christian \"dissem\" Basler, Stefan \"smfcomix\" Freund, Creepers Swankin\n
     - Traduction grecque : Γιάννης \"Evropi\" Ανθυμίδης, ilias345\n
     - Traduction italienne : Silvia \"Kathjal\", Vittorio \"owlbrainiac\"\n
-    - Traduction japonaise : Naofumi\n
+    - Traduction japonaise : Naofumi, RACER\n
     - Traduction coréenne : Jang \"palindrom615\"\n
+    - Traduction norvégienne : Allan Nordhøy\n
     - Traduction polonaise : Jan \"Shark103\" Bielak\n
-    - Traduction portugaise : Marcelo Ghelman\n
+    - Traduction portugaise : Marcelo Ghelman, Lucas Elder Neves\n
     - Traduction russe : Anonyme, aiz1, deliium\n
     - Traduction espagnole : Zufre, Jeffrey \"TeslaStern\", celisflenbers\n
     - Traduction turque : ultrapeer, Mauron\n
